Bugfix for referential integrity nullpointer